fix bug auth service
