# src/controllers/AuthController.js
@@ -5,90 +5,27 @@ require('dotenv/config');
 const { User } = require('../../models');
 const conn = require('../config/db.config')
 const mailer = require('../utils/mailer');
-const { AppError } = require('../core/error.response');
+const { AppError, BadRequestError } = require('../core/error.response');
 const { Op } = require('sequelize');
 const { OK } = require('../core/success.reponse');
-const { register, login, logout, handleRefreshToken } = require('../services/auth.services');
+const { register, login, logout, handleRefreshToken, verifyEmail } = require('../services/auth.services');
+const { send } = require('../services/mail.services');
 
 class AuthController {
-    checkUserExisted(req, res, next) {
-        conn.promise().query(`SELECT id FROM user WHERE email = '${req.body.email}';`)
-            .then(([rows, fields]) => {
-                if (!rows[0]?.id) next();
-                else res.status(404).json({ message: 'Email đã tồn tại' });
-            })
-            .catch(err => console.error(err));
-    }
+    async sendEmail(req, res) {
 
-    sendEmail(req, res) {
-        const { email } = req.body;
-        bcrypt.hash(email, 10)
-            .then(hash => {
-                mailer.sendMail('leminhnhut1612@gmail.com', "Xác thực email đăng ký tài khoản Workflex", `<p>Vui lòng nhấn vào đường dẫn đính kèm để xác thực email của bạn, <a href="${process.env.APP_FE_URL}/verify-email?email=${email}&token=${hash}">Chính là tôi</a ></p >`)
-
-                res.send("Email đã được gửi đi");
-            })
-            .catch(err => console.log(err));
+        return OK.create({
+            message: 'Đã gửi email xác thực',
+            metadata: await send({ email: req.body.email })
+        }).send(res);
     }
 
     verifyEmail(req, res) {
-        bcrypt.compare(req.query.email, req.query.token, (err, result) => {
-            if (result === true) {
-                if (!err) {
-                    res.json({
-                        status: 'success',
-                        emailVerifiedAt: new Date().toLocaleString()
-                    });
-                }
-                else res.json({ status: 'fail' })
-            }
-            else res.status(404).send('fail');
-        })
+        return OK.create({
+            message: 'Xác thực email thành công.',
+            metadata: verifyEmail(req.query.email, req.query.token)
+        }).send(res);
     }
-
-    // async registerUser(req, res, next) {
-    //     const { name, email, password, passwordConfirm, address, role, sex, bankAccount, phone, categories, dataOfBirth, experience, skills } = req.body;
-
-    //     if (password !== passwordConfirm) {
-    //         next(new AppError('Mật khẩu không khớp!!!', 400))
-    //     }
-
-    //     const transaction = await sequelize.transaction();
-    //     try {
-    //         const avatar = sex ? 'avatar-default/avatar-man.png' : 'avatar-default/avatar-woman.png'
-    //         const newUser = await User.create({
-    //             name, email, password, address, role, avatar, sex, bankAccount, phone, dataOfBirth, experience
-    //         }, {
-    //             transaction
-    //         });
-
-    //         await newUser.addCategories(categories, {
-    //             transaction
-    //         });
-
-    //         if (role === 'fre') {
-    //             await newUser.addSkills(skills, {
-    //                 transaction
-    //             });
-    //         };
-
-    //         await newUser.reload({ include: [Category, Skill], transaction });
-    //         transaction.commit();
-
-    //         const token = await jwt.sign({ id: newUser.id }, process.env.JWT_SECRET_KEY, { expiresIn: process.env.JWT_SECRET_EXPIRATION });
-
-    //         res.status(200).json({
-    //             status: 'success',
-    //             message: 'Đăng ký tài khoản thành công!!!',
-    //             token,
-    //             data: newUser,
-    //         })
-    //     }
-    //     catch (err) {
-    //         await transaction.rollback();
-    //         sequelizeErrorHandler(err, next);
-    //     }
-    // }
 
     async registerUser(req, res, next) {
         return OK.create(await register(req.body)).send(res)
